# VibeMatch

./: .gitignore  pyproject.toml
src/assets/: __init__.py  knn_model.pkl  knn_train_data.pkl  pretty_df.pkl
src/service/: agents.py  cli_chatbot.py  prompts.py  ui_chatbot.py
src/service/tools/: data_retriever.py  error_handler.py  recommender.py  web_search.py
src/utils/: __init__.py  accord_based_recommender.py  alias_parser.py  definitions.py  flanker_detector.py  note_based_recommender.py  reader.py  writer.py
src/utils/scraper/: brand_listing.py  perfume_scraper.py  review_scraper.py
